<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_pic"
    tools:context=".EditProfileActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:cardBackgroundColor="@color/cardview_dark_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edittext"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_ac"
                android:textAlignment="center"
                android:textColor="@color/lavander"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="289dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints="Email"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="8dp"
                android:hint="@string/name"
                android:padding="8dp"
                android:textColor="@color/lavander"
                android:textColorHint="@color/lavander"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="289dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="Email"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/lavander"
                android:textColorHint="@color/lavander" />

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="291dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="Email"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_username"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/lavander"
                android:textColorHint="@color/lavander" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="291dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="Password"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/lavander"
                android:textColorHint="@color/lavander" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="292dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/lavander"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
